service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calorie-service
spec:
  type: NodePort
  selector:
    app: calorie
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
