runningweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: runningweb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   # ✅ 여기를 추가
  rules:
  - host: runningweb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: runningweb-service
            port:
              number: 80
